Date: Wed, 15 Dec 2021 10:20:21 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.6.1 2021-12-XX Marc-Etienne Vargenau ==

This release makes ~PhpWiki compatible with PHP 8.1.
##READONLY## is renamed as ##ISREADONLY##, since ##readonly## is now a keyword in PHP 8.1.

=== Fixes ===
* Make list of pages work with PDO (~AllPages, ~MostPopular...)

=== Changes ===
* Remove ADODB DATABASE_TYPE. Use SQL (Pear) or PDO.
* Add “Rename” tab in Sidebar theme.
* Add sample images for ~PhotoAlbum in blog theme
* Remove EDITING_POLICY
* Remove ENABLE_XHTML_XML
* More translations

=== Plugins ===
* Chart plugin: new argument “legend”
* ~PreferencesInfo plugin removed
* ~CategoryPage plugin removed, categories are better created with the button in the toolbar

== 1.6.0 2021-08-12 Marc-Etienne Vargenau ==

Major release:
* PHP 7 and 8 compatible (works from PHP 5.3.3 to PHP 8.0)
* Full HTML 5: Add HTML 5 <main> <header> <footer> <nav> in all themes. Add ARIA roles.
* Flash is dead
* Internet Explorer is dead

=== Fixes ===
* Make function IsSafeURL more strict
* Make XHTML ZIP Snapshot work again (broken since ~PhpWiki 1.5.3)
* It was possible to rename a page to a name with illegal characters, like ~[~]
* Better handling of page names with slash
* Remove wrong calls to setTightness in ##lib/~InlineParser.php## (bug reported by Harold Hallikainen)
* Importing a ZIP from an old wiki in Latin 1 (ISO 8859-1) failed. Reported by Frank Michael.
* Better check arguments for ~GoogleMaps plugin
* Revert Subversion commit 9111, bad side effects; re-opening Bug#607 BackLinks do not work inside a ~RichTable
* Security fixes

=== Changes ===
* All revisions are kept.
* Add new button in Edit Toolbar: convert Tab Separated Values to Wikicreole table
* Update jQuery to 2.2.4