@@ -465,12 +465,6 @@ DATABASE_TIMEOUT = 12
 ; to set this parameter to 0 (disabled).
 ;DATABASE_OPTIMISE_FREQUENCY = 50
 
-; Store DB query results (esp. for page lists) in memory to avoid duplicate queries.
-; Disable only for old php's with low memory or memory_limit=8MB.
-; Requires at least memory_limit=16MB
-; Default: true
-;USECACHE = false
-
 ;========================================================================
 ; Part Three: User Authentication
 ;========================================================================
